--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -91,7 +91,7 @@ a {
 // ============== Site Structure =============
 // ===========================================
 .vh {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .hidden {
